adjust jvm memory settings / ensure docker signals are correctly handled