@@ -2,4 +2,4 @@
 echo "********************************************************"
 echo "Starting MCR2"
 echo "********************************************************"
-java -Djava.security.egd=file:/dev/./urandom -jar /usr/local/mcr2/mcr2.jar
+exec java -Djava.security.egd=file:/dev/./urandom -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -jar /usr/local/mcr2/mcr2.jar
